Refactor: Replace Math.max/min with Math.clamp for row and size settings; remove debug messages from lore configuration